[package]
name = "sentient_core"
version.workspace = true
edition.workspace = true

[features]
default = []
python = ["sentient_python"]

[dependencies]
sentient_common = { path = "../sentient_common" }
sentient_memory = { path = "../sentient_memory" }
sentient_vgate = { path = "../sentient_vgate" }
sentient_guardrails = { path = "../sentient_guardrails" }
sentient_python = { path = "../sentient_python", optional = true }
sentient_graph = { path = "../sentient_graph" }

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
env_logger.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
